# miniball

./: .pre-commit-config.yaml  README.md
.github/workflows/: release.yaml
cpp/main/: Seb_debug.h
python/: CMakeLists.txt  Cargo.toml  miniball_python.cpp  pyproject.toml  setup.py
python/miniball/: __init__.py
python/src/: lib.rs
python/test/: test_miniball.py
rust/miniball-rs/: Cargo.toml  build.rs
rust/miniball-rs/src/: lib.rs  miniball_rs.cpp  miniball_rs.h
