[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=1.3.2", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "miniball"
version = "2.0.0"
description = "Library to find the smallest enclosing ball of points."
readme = "../README.md"
requires-python = ">=3.8"
authors = [
  { name = "Kaspar Fischer" },
  { name = "Bernd Gärtner" },
  { name = "Martin Kutz" },
]

dependencies = [
  "numpy",
  "nanobind",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Source = "https://github.com/hbf/miniball"
Issues = "https://github.com/hbf/miniball/issues"

[tool.scikit-build]
build.verbose = true
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
